cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
project( DisplayImage )
set(CMAKE_BUILD_TYPE Debug)
find_package(SFML 2.5 
  COMPONENTS system window graphics audio REQUIRED)
set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Include/)
set(HEADERS  ${INCLUDE_DIR}/Animation.h ${INCLUDE_DIR}/Asteroids.h ${INCLUDE_DIR}/AssetMan.h ${INCLUDE_DIR}/Bullet.h ${INCLUDE_DIR}/Collision.h ${INCLUDE_DIR}/DrawMap.h ${INCLUDE_DIR}/Entity.h ${INCLUDE_DIR}/Game.h ${INCLUDE_DIR}/GameObject.h ${INCLUDE_DIR}/GameOver.h ${INCLUDE_DIR}/LevelManager.h ${INCLUDE_DIR}/Menu.h ${INCLUDE_DIR}/SoundManager.h ${INCLUDE_DIR}/SpaceConstants.h ${INCLUDE_DIR}/SpaceShip.h ${INCLUDE_DIR}/State.h ${INCLUDE_DIR}/StateMan.h ${INCLUDE_DIR}/TextManager.h )
set(SOURCES Animation.cpp Asteroids.cpp AssetMan.cpp Bullet.cpp Collision.cpp DrawMap.cpp Entity.cpp Game.cpp GameObject.cpp GameOver.cpp LevelManager.cpp Main.cpp Menu.cpp SoundManager.cpp SpaceShip.cpp StateMan.cpp TextManager.cpp)
include_directories(${INCLUDE_DIR})
add_executable(SwagAsteroids ${SOURCES} ${HEADERS})
target_include_directories(SwagAsteroids PRIVATE ${PROJECT_BINARY_DIR} ${INCLUDE_DIR})
target_link_libraries(SwagAsteroids sfml-system sfml-graphics sfml-audio sfml-window) 
